# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import articlesRouter from "./articles";
+import categoriesRouter from "./categories";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/articles", articlesRouter);
+router.use("/categories", categoriesRouter);
+router.use("/admin", adminRouter);
 
 export default router;
